// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css to js case brackets 1`] = `
Object {
  "&:after": Object {
    "color": "var(--white)",
    "content": "' {'",
  },
  "&:before": Object {
    "color": "var(--white)",
    "content": "' }'",
  },
}
`;

exports[`css to js comments case 2 1`] = `
Object {
  ".info": Object {
    "> .type": Object {
      "display": "inline-block",
      "padding": "0",
      "vertical-align": "top",
    },
  },
}
`;

exports[`css to js comments in strings 1`] = `
Object {
  ".short-text": Object {
    "&:after": Object {
      "content": "'*/ '",
    },
    "&:before": Object {
      "content": "'/* '",
    },
    "font-style": "italic",
  },
}
`;

exports[`css to js keyframes 1`] = `
Object {
  "@keyframes blink": Object {
    "0%": Object {
      "filter": "brightness(1)",
    },
    "100%": Object {
      "filter": "brightness(2)",
    },
    "50%": Object {
      "filter": "brightness(1.5)",
    },
  },
}
`;
